[package]
name = "minimal"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]

[dependencies]
nalgebra = "*"
ncollide2d = "*"
nphysics2d = "*"
wasm-bindgen = "*"
js-sys = "*"

[dependencies.web-sys]
version = "*"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
]

[lib]
crate-type = ["cdylib"]
