[package]
name = "minimal"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]

[dependencies]
nalgebra = "*"
js-sys = "*"
ncollide2d = "*"
serde_json = "1.0.32"
serde_derive = "1.0.80"
serde = "1.0.80"


[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.nphysics2d]
version = "0.9"
default-features=false
features = ["use-wasm-bindgen"]


[dependencies.web-sys]
version = "*"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
  'console',
]

[lib]
crate-type = ["cdylib"]
