[package]
name = "minimal"
version = "0.1.0"
authors = [ "Hendrik Sollich <hendrik@hoodie.de>", "Gilbert Röhrbein <gilbert@ifsr.de>" ]
edition = "2018"

[dependencies]
nalgebra = "0.16"
js-sys = "0.3"
ncollide2d = "0.17"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"


[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.nphysics2d]
version = "0.9"
default-features = false
features = ["use-wasm-bindgen"]


[dependencies.web-sys]
version = "0.3"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Window',
  'EventTarget',
  'KeyboardEvent',
  'console',
]

[lib]
crate-type = ["cdylib"]
